// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`greedyPack gives nothing for nothingg 1`] = `Array []`;

exports[`greedyPack normalizePolygons can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 97.13437499999999%;
        height: 47.961590296495956%;
        z-index: 16;
        transform: translateX(2.059003313708458%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.975,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.975,
      \\"e\\":16,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 16.975,
        "y": 0.975,
      },
      Object {
        "x": 16.975,
        "y": 356.84999999999997,
      },
      Object {
        "x": 794.05,
        "y": 356.84999999999997,
      },
      Object {
        "x": 794.05,
        "y": 0.975,
      },
    ],
    "rotate": -0,
    "scale": 0.975,
    "svgTransform": "matrix(0.975,0,0,0.975,16,0)",
    "translateX": 16,
    "translateY": 0,
    "zIndex": 16,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 97.13437499999999%;
        height: 51.115229110512125%;
        z-index: 728;
        transform: translateX(2.059003313708458%) translateY(93.90547755586316%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.975,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.975,
      \\"e\\":16,
      \\"f\\":356.15999999999997
    }",
    "points": Array [
      Object {
        "x": 16.975,
        "y": 357.135,
      },
      Object {
        "x": 55.975,
        "y": 736.41,
      },
      Object {
        "x": 769.675,
        "y": 736.41,
      },
      Object {
        "x": 794.05,
        "y": 357.135,
      },
    ],
    "rotate": -0,
    "scale": 0.975,
    "svgTransform": "matrix(0.975,0,0,0.975,16,356.15999999999997)",
    "translateX": 16,
    "translateY": 356.15999999999997,
    "zIndex": 728,
  },
]
`;

exports[`greedyPack works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 97.67575877568494%;
        height: 48.22890685505281%;
        z-index: 16;
        transform: translateX(2.047590953035804%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.980434216067101,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.980434216067101,
      \\"e\\":16,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 16.980434216067103,
        "y": 0.980434216067101,
      },
      Object {
        "x": 16.980434216067103,
        "y": 358.83892308055897,
      },
      Object {
        "x": 798.3865044215466,
        "y": 358.83892308055897,
      },
      Object {
        "x": 798.3865044215466,
        "y": 0.980434216067101,
      },
    ],
    "rotate": -0,
    "scale": 0.980434216067101,
    "svgTransform": "matrix(0.980434216067101,0,0,0.980434216067101,16,0)",
    "translateX": 16,
    "translateY": 0,
    "zIndex": 16,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 96.60479773621509%;
        height: 50.83654853867456%;
        z-index: 751;
        transform: translateX(3.105435827516218%) translateY(96.3873461289816%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.9696842934626357,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.9696842934626357,
      \\"e\\":24,
      \\"f\\":363.58
    }",
    "points": Array [
      Object {
        "x": 24.969684293462635,
        "y": 364.54968429346263,
      },
      Object {
        "x": 63.75705603196806,
        "y": 741.7568744504279,
      },
      Object {
        "x": 773.5659588466174,
        "y": 741.7568744504279,
      },
      Object {
        "x": 797.8080661831833,
        "y": 364.54968429346263,
      },
    ],
    "rotate": -0,
    "scale": 0.9696842934626357,
    "svgTransform": "matrix(0.9696842934626357,0,0,0.9696842934626357,24,363.58)",
    "translateX": 24,
    "translateY": 363.58,
    "zIndex": 751,
  },
]
`;

exports[`greedyPack works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 62.61266588184932%;
        height: 30.91596593272616%;
        z-index: 1220;
        transform: translateX(59.48324561603041%) translateY(201.00285641035063%) rotate(4.999999999999992deg)
      ",
    "matrix": "{
      \\"a\\":0.6260919024831941,
      \\"b\\":0.05477594379265779,
      \\"c\\":-0.05477594379265779,
      \\"d\\":0.6260919024831941,
      \\"e\\":297.95236666595923,
      \\"f\\":461.09345161829816
    }",
    "points": Array [
      Object {
        "x": 298.5236826246498,
        "y": 461.77431946457403,
      },
      Object {
        "x": 278.5304631403297,
        "y": 690.2978638709399,
      },
      Object {
        "x": 777.5257094194353,
        "y": 733.9542910736882,
      },
      Object {
        "x": 797.5189289037555,
        "y": 505.4307466673223,
      },
    ],
    "rotate": 4.999999999999992,
    "scale": 0.6284834718378852,
    "svgTransform": "matrix(0.6260919024831941,0.05477594379265779,-0.05477594379265779,0.6260919024831941,297.95236666595923,461.09345161829816)",
    "translateX": 297.95236666595923,
    "translateY": 461.09345161829816,
    "zIndex": 1220,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 61.92615239500967%;
        height: 32.587531114534976%;
        z-index: 790;
        transform: translateX(159.64806932573455%) translateY(-0.2523672695215269%) rotate(89deg)
      ",
    "matrix": "{
      \\"a\\":0.010848284875230851,
      \\"b\\":0.6214978242615193,
      \\"c\\":-0.6214978242615193,
      \\"d\\":0.010848284875230851,
      \\"e\\":790.9112536507605,
      \\"f\\":-0.6102227475884661
    }",
    "points": Array [
      Object {
        "x": 790.3006041113742,
        "y": 0.022123361548284093,
      },
      Object {
        "x": 548.9718818686524,
        "y": 29.102019148473858,
      },
      Object {
        "x": 556.9128263973214,
        "y": 484.038426507906,
      },
      Object {
        "x": 798.9466871569332,
        "y": 495.3558892979792,
      },
    ],
    "rotate": 89,
    "scale": 0.6215924958093819,
    "svgTransform": "matrix(0.010848284875230851,0.6214978242615193,-0.6214978242615193,0.010848284875230851,790.9112536507605,-0.6102227475884661)",
    "translateX": 790.9112536507605,
    "translateY": -0.6102227475884661,
    "zIndex": 790,
  },
]
`;

exports[`greedyPack works 3`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 97.67575877568494%;
        height: 48.22890685505281%;
        z-index: 164;
        transform: translateX(2.047590953035804%) translateY(20.73445294966773%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.980434216067101,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.980434216067101,
      \\"e\\":16,
      \\"f\\":74.2
    }",
    "points": Array [
      Object {
        "x": 16.980434216067103,
        "y": 75.1804342160671,
      },
      Object {
        "x": 16.980434216067103,
        "y": 433.03892308055896,
      },
      Object {
        "x": 798.3865044215466,
        "y": 433.03892308055896,
      },
      Object {
        "x": 798.3865044215466,
        "y": 75.1804342160671,
      },
    ],
    "rotate": -0,
    "scale": 0.980434216067101,
    "svgTransform": "matrix(0.980434216067101,0,0,0.980434216067101,16,74.2)",
    "translateX": 16,
    "translateY": 74.2,
    "zIndex": 164,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 96.60479773621509%;
        height: 50.83654853867456%;
        z-index: 751;
        transform: translateX(3.105435827516218%) translateY(96.3873461289816%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.9696842934626357,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.9696842934626357,
      \\"e\\":24,
      \\"f\\":363.58
    }",
    "points": Array [
      Object {
        "x": 24.969684293462635,
        "y": 364.54968429346263,
      },
      Object {
        "x": 63.75705603196806,
        "y": 741.7568744504279,
      },
      Object {
        "x": 773.5659588466174,
        "y": 741.7568744504279,
      },
      Object {
        "x": 797.8080661831833,
        "y": 364.54968429346263,
      },
    ],
    "rotate": -0,
    "scale": 0.9696842934626357,
    "svgTransform": "matrix(0.9696842934626357,0,0,0.9696842934626357,24,363.58)",
    "translateX": 24,
    "translateY": 363.58,
    "zIndex": 751,
  },
]
`;

exports[`greedyPack works 4`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 97.2099610456744%;
        height: 41.29136409974906%;
        z-index: 239;
        transform: translateX(2.0574023263524337%) translateY(33.905394760462954%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.9050161994465548,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.9050161994465548,
      \\"e\\":14.84,
      \\"f\\":112
    }",
    "points": Array [
      Object {
        "x": 15.745016199446555,
        "y": 112.90501619944655,
      },
      Object {
        "x": 15.745016199446555,
        "y": 443.23592899743903,
      },
      Object {
        "x": 737.0429271583507,
        "y": 443.23592899743903,
      },
      Object {
        "x": 737.0429271583507,
        "y": 112.90501619944655,
      },
    ],
    "rotate": -0,
    "scale": 0.9050161994465548,
    "svgTransform": "matrix(0.9050161994465548,0,0,0.9050161994465548,14.84,112)",
    "translateX": 14.84,
    "translateY": 112,
    "zIndex": 239,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 96.1441072224409%;
        height: 43.523906556572925%;
        z-index: 918;
        transform: translateX(3.1203160408563995%) translateY(128.6649210295737%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.89509319396551,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.89509319396551,
      \\"e\\":22.259999999999998,
      \\"f\\":448
    }",
    "points": Array [
      Object {
        "x": 23.15509319396551,
        "y": 448.8950931939655,
      },
      Object {
        "x": 58.95882095258591,
        "y": 797.0863456465489,
      },
      Object {
        "x": 714.1670389353392,
        "y": 797.0863456465489,
      },
      Object {
        "x": 736.544368784477,
        "y": 448.8950931939655,
      },
    ],
    "rotate": -0,
    "scale": 0.89509319396551,
    "svgTransform": "matrix(0.89509319396551,0,0,0.89509319396551,22.259999999999998,448)",
    "translateX": 22.259999999999998,
    "translateY": 448,
    "zIndex": 918,
  },
]
`;
